# Self-Adaptive-Music-System

./: deployment.sh
app/: .gitignore  Dockerfile  app.py  line_bot.py  main.py  models.py  pyproject.toml  requirements.txt  room_manager.py  run.bat  setup.bat  utilities.py  websocket_manager.py
app/innertube/: audio_cache.py  audio_extractor.py  recommendations.py  search.py
app/line_extensions/: __init__.py  async_webhook.py
driver/: .gitignore  Monitor.py  Planner.py  driver.py  requirements.txt  runEnv.sh  utils.py
driver/mapek/: Analyzer.py  Executor.py  Knowledge.py  Monitor.py  Planner.py  config.sh  knowledge.json
test/: test.js
